Fixed overflow when scrolling up

--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@
      * fill visible viewport
      * https://developers.google.com/web/updates/2016/12/url-bar-resizing
      */
-    @apply h-full;
+    @apply h-full overflow-hidden;
   }
 
   button {
